--- a/main.html
+++ b/main.html
@@ -1,13 +1,89 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Voting Eligibility Form</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f2f2f2;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
 
-<html>
-  <head>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
+    .form-container {
+      background: white;
+      padding: 30px;
+      border-radius: 8px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      text-align: center;
+      width: 300px;
+    }
 
-  <body>
-    <!-- write the body here -->
+    input {
+      display: block;
+      margin: 15px auto;
+      padding: 10px;
+      width: 90%;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
 
-    <script type="text/javascript" src="./script.js"></script>
-  </body>
+    button {
+      padding: 10px 20px;
+      font-size: 16px;
+      background: #3498db;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background: #2980b9;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="form-container">
+    <h2>Check Voting Eligibility</h2>
+    <form id="voteForm">
+      <input type="text" id="name" placeholder="Enter your name" />
+      <input type="number" id="age" placeholder="Enter your age" />
+      <button id="btn" type="submit">Submit</button>
+    </form>
+  </div>
+
+  <script>
+    document.getElementById("voteForm").addEventListener("submit", function (e) {
+      e.preventDefault(); // Prevent page reload
+
+      const name = document.getElementById("name").value.trim();
+      const age = parseInt(document.getElementById("age").value.trim());
+
+      if (!name || isNaN(age)) {
+        alert("Please enter valid details.");
+        return;
+      }
+
+      const checkEligibility = new Promise((resolve, reject) => {
+        setTimeout(() => {
+          if (age > 18) {
+            resolve(`Welcome, ${name}. You can vote.`);
+          } else {
+            reject(`Oh sorry ${name}. You aren't old enough.`);
+          }
+        }, 4000);
+      });
+
+      checkEligibility
+        .then((message) => alert(message))
+        .catch((message) => alert(message));
+    });
+  </script>
+
+</body>
 </html>
