--- a/main.html
+++ b/main.html
@@ -1,26 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Voting Eligibility Checker</title>
+  <meta charset="UTF-8" />
+  <title>Voting Eligibility Form</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f1f1f1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
+    #voteForm {
+      background: white;
+      padding: 30px 40px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      width: 300px;
+    }
+
+    h2 {
+      text-align: center;
+      color: #333;
+    }
+
+    label {
+      display: block;
+      margin: 15px 0 5px;
+      color: #555;
+    }
+
+    input {
+      width: 100%;
+      padding: 10px;
+      font-size: 14px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
+    }
+
+    #btn {
+      margin-top: 20px;
+      width: 100%;
+      padding: 12px;
+      background-color: #4caf50;
+      border: none;
+      color: white;
+      font-size: 16px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    #btn:hover {
+      background-color: #45a049;
+    }
+  </style>
 </head>
 <body>
-  <h2>Check Voting Eligibility</h2>
-  
+
   <form id="voteForm">
+    <h2>Can You Vote?</h2>
     <label for="name">Name:</label>
-    <input type="text" id="name" /><br><br>
+    <input type="text" id="name" placeholder="Enter your name" />
 
     <label for="age">Age:</label>
-    <input type="number" id="age" /><br><br>
+    <input type="number" id="age" placeholder="Enter your age" />
 
-    <button type="submit" id="btn">Check Eligibility</button>
+    <button type="submit" id="btn">Submit</button>
   </form>
 
   <script>
-    document.getElementById("voteForm").addEventListener("submit", function(e) {
-      e.preventDefault(); 
-      
+    document.getElementById("voteForm").addEventListener("submit", function (e) {
+      e.preventDefault();
+
       const name = document.getElementById("name").value.trim();
       const age = document.getElementById("age").value.trim();
 
@@ -29,7 +83,7 @@
         return;
       }
 
-      const checkEligibility = new Promise((resolve, reject) => {
+      const votePromise = new Promise((resolve, reject) => {
         setTimeout(() => {
           if (Number(age) > 18) {
             resolve();
@@ -39,7 +93,7 @@
         }, 4000);
       });
 
-      checkEligibility
+      votePromise
         .then(() => {
           alert(`Welcome, ${name}. You can vote.`);
         })
@@ -48,5 +102,6 @@
         });
     });
   </script>
+
 </body>
 </html>
